--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </article>
         <aside></aside>
         <footer>
-            &copy Fóti Dávid - Medgyaszay Gergő
+            &copy Fóti Dávid - Medgyaszay Gergő - Csillag Gergő Zsolt
         </footer>
     </main>
 </body>
