--- a/urlap.html
+++ b/urlap.html
@@ -63,7 +63,7 @@
 
       </aside>
       <footer>
-        
+                    &copy Fóti Dávid - Medgyaszay Gergő - Csillag Gergő Zsolt
       </footer>
     </main>
   </body>
