Urlap egy kis css-el.

--- a/urlap.html
+++ b/urlap.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="urlap.css">
+    <link rel="stylesheet" href="kozos.css">
     <title>Űrlap</title>
   </head>
 
@@ -130,6 +132,7 @@
           <input type="submit" value="Küldés">
         </form>
       </article>
+      <aside>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt ipsa magnam ullam enim vitae neque, provident quas inventore, error ab perspiciatis nemo animi delectus repudiandae natus labore. Unde, nobis nulla!</aside>
       <footer>&copy; Fóti Dávid - Medgyaszay Gergő - Csillag Gergő Zsolt</footer>
     </main>
     <script>
