--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esemenylista</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="urlap.css">
+    <link rel="stylesheet" href="kozos.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -34,7 +35,7 @@
                                     <li>Befejezési időpont: 2026. március 6. 16:00</li>
                                     <li>Helyszín: Szf Sportcsarnok (kis aranyos ping-pong terem)</li>
                                 </ul>
-                                <a href="#" class="btn btn-primary">További információk</a>
+                                <a href="marcius_solo.html" class="btn btn-primary">További információk</a>
                             </div>
                         </div>
                     </div>
@@ -50,7 +51,7 @@
                                     <li>Befejezési időpont: 2026. március 20. 16:00</li>
                                     <li>Helyszín: Szf Sportcsarnok (kis aranyos ping-pong terem)</li>
                                 </ul>
-                                <a href="#" class="btn btn-primary">További információk</a>
+                                <a href="marcius_paros.html" class="btn btn-primary">További információk</a>
                             </div>
                         </div>
                     </div>
@@ -66,7 +67,7 @@
                                     <li>Befejezési időpont: 2026. április 10. 16:00</li>
                                     <li>Helyszín: Szf Sportcsarnok (kis aranyos ping-pong terem)</li>
                                 </ul>
-                                <a href="#" class="btn btn-primary">További információk</a>
+                                <a href="aprilis_solo.html" class="btn btn-primary">További információk</a>
                             </div>
                         </div>
                     </div>
@@ -82,7 +83,7 @@
                                     <li>Befejezési időpont: 2026. április 24. 16:00</li>
                                     <li>Helyszín: Szf Sportcsarnok (kis aranyos ping-pong terem)</li>
                                 </ul>
-                                <a href="#" class="btn btn-primary">További információk</a>
+                                <a href="aprilis_paros.html" class="btn btn-primary">További információk</a>
                             </div>
                         </div>
                     </div>
