--- a/aprilis_solo.html
+++ b/aprilis_solo.html
@@ -1,41 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="hu">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Szf ping-pong verseny</title>
-</head>
-<body>
+    <link rel="stylesheet" href="esemeny.css" />
+  </head>
+  <body>
     <main>
-        <header>
-            <h1>Üdvözlünk a 13. Szf ping-pong versenyen</h1>
-        </header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Kezdőoldal</a></li>
-                <li><a href="urlap.html">Jelentkezési lap</a></li>
-            </ul>
-        </nav>
-        <article>
-            <h2>A versenyről</h2>
-            <p>A sztár vendégünk a népszerű bajnok, the man the myth the legend Medgyaszay Gergő vajon te leszel aki elragadja tőle a végső győzelmet?</p>
-            <p>Ne hagyd ki a lehetőséget, hogy találkozz vele és megmutasd a tudásodat a ping-pong asztalnál!</p>
-            <p>A verseny célja, hogy népszerűsítse a ping-pong sportágat és lehetőséget biztosítson a résztvevők számára, hogy megmutassák tudásukat.</p>
-            <p>A cél az élmény szerzés egy amatőr de kompetitív bajnokságon!</p>
-            <h2>Amit a versenytől várhatsz:</h2>
-            <p>Jó hangulat, izgalmas mérkőzések és kölcsönös tisztelet mind a sportág mind egymás felé!</p>
-        </article>
-        <aside>
-            <h2>A verseny részletei:</h2>
-            <ul>
-                <li>Kezdési időpont: 2026. március 2. 10:00</li>
-                <li>Befejezési időpont: 2026. március 6. 16:00</li>
-                <li>Helyszín: Szf Sportcsarnok (kis aranyos ping-pong terem)</li>
-            </ul>
-        </aside>
-        <footer>
-            &copy Fóti Dávid - Medgyaszay Gergő - Csillag Gergő Zsolt
-        </footer>
+      <header>
+        <h1>Üdvözlünk a 13. Szf ping-pong versenyen</h1>
+      </header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Kezdőoldal</a></li>
+          <li><a href="urlap.html">Jelentkezési lap</a></li>
+        </ul>
+      </nav>
+      <article>
+        <h2>A versenyről</h2>
+        <p>
+          A sztár vendégünk a népszerű bajnok, the man the myth the legend
+          Medgyaszay Gergő vajon te leszel aki elragadja tőle a végső győzelmet?
+        </p>
+        <p>
+          Ne hagyd ki a lehetőséget, hogy találkozz vele és megmutasd a
+          tudásodat a ping-pong asztalnál!
+        </p>
+        <p>
+          A verseny célja, hogy népszerűsítse a ping-pong sportágat és
+          lehetőséget biztosítson a résztvevők számára, hogy megmutassák
+          tudásukat.
+        </p>
+        <p>A cél az élmény szerzés egy amatőr de kompetitív bajnokságon!</p>
+        <h2>Amit a versenytől várhatsz:</h2>
+        <p>
+          Jó hangulat, izgalmas mérkőzések és kölcsönös tisztelet mind a sportág
+          mind egymás felé!
+        </p>
+      </article>
+      <aside>
+        <h2>A verseny részletei:</h2>
+        <ul>
+          <li>Kezdési időpont: 2026. április 6. 16:00</li>
+          <li>Befejezési időpont: 2026. április 10. 16:00</li>
+          <li>Helyszín: Szf Sportcsarnok (kis aranyos ping-pong terem)</li>
+        </ul>
+      </aside>
+      <footer>&copy Fóti Dávid - Medgyaszay Gergő - Csillag Gergő Zsolt</footer>
     </main>
-</body>
+  </body>
 </html>
