--- a/marcius_paros.html
+++ b/marcius_paros.html
@@ -1,41 +1,52 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="hu">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Szf ping-pong verseny</title>
-</head>
-<body>
+    <link rel="stylesheet" href="esemeny.css" />
+  </head>
+  <body>
     <main>
-        <header>
-            <h1>Üdvözlünk a 13. Szf ping-pong versenyen</h1>
-        </header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Kezdőoldal</a></li>
-                <li><a href="urlap.html">Jelentkezési lap</a></li>
-            </ul>
-        </nav>
-        <article>
-            <h2>A versenyről</h2>
-            <p>Csatlakozz egy izgalmas páros versenyhez, ahol a legjobb ping-pong játékosok mérik össze tudásukat!</p>
-            <p></p>
-            <p></p>
-            <p></p>
-            <h2>Amit a versenytől várhatsz:</h2>
-            <p></p>
-        </article>
-        <aside>
-            <h2>A verseny részletei:</h2>
-            <ul>
-                <li>Kezdési időpont: 2026. március 16. 10:00</li>
-                <li>Befejezési időpont: 2026. március 20. 16:00</li>
-                <li>Helyszín: Szf Sportcsarnok (kis aranyos ping-pong terem)</li>
-            </ul>
-        </aside>
-        <footer>
-            &copy Fóti Dávid - Medgyaszay Gergő - Csillag Gergő Zsolt
-        </footer>
+      <header>
+        <h1>Üdvözlünk a 13. Szf ping-pong versenyen</h1>
+      </header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Kezdőoldal</a></li>
+          <li><a href="urlap.html">Jelentkezési lap</a></li>
+        </ul>
+      </nav>
+      <article>
+        <h2>A versenyről</h2>
+        <p>
+          Csatlakozz egy izgalmas páros versenyhez, ahol a legjobb ping-pong
+          játékosok mérik össze tudásukat!
+        </p>
+        <p>
+          Hívd el a barátod, párod vagy akár egy kedves tanárod és közös erővel
+          nyerjétek meg a bajnokságot ami egy teljes héten keresztül tart!
+        </p>
+        <p>
+          A célunk hogy közösséget éppítsünk az osztályon belül és akár új
+          barátságok alakuljanak ki egy barátságos bajnokság keretein belül amik
+          akár egy életen át tarthatnak!!
+        </p>
+        <h2>Amit a versenytől várhatsz:</h2>
+        <p>
+          Jó hangulat, izgalmas mérkőzések és kölcsönös tisztelet mind a sportág
+          mind egymás felé!
+        </p>
+      </article>
+      <aside>
+        <h2>A verseny részletei:</h2>
+        <ul>
+          <li>Kezdési időpont: 2026. március 16. 10:00</li>
+          <li>Befejezési időpont: 2026. március 20. 16:00</li>
+          <li>Helyszín: Szf Sportcsarnok (kis aranyos ping-pong terem)</li>
+        </ul>
+      </aside>
+      <footer>&copy Fóti Dávid - Medgyaszay Gergő - Csillag Gergő Zsolt</footer>
     </main>
-</body>
+  </body>
 </html>
