--- a/marcius_paros.html
+++ b/marcius_paros.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Szf ping-pong verseny</title>
     <link rel="stylesheet" href="esemeny.css" />
+    <link rel="stylesheet" href="kozos.css">
   </head>
   <body>
     <main>
