--- a/index.html
+++ b/index.html
@@ -1,100 +1,119 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="hu">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Esemenylista</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="kozos.css">
-    <link rel="stylesheet" href="index.css">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="kozos.css" />
+    <link rel="stylesheet" href="index.css" />
+  </head>
 
-<body>
+  <body>
     <main>
-        <header>
-            <h1>Ping-pong verseny eseménylista</h1>
-        </header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Kezdőoldal</a></li>
-                <li><a href="urlap.html">Jelentkezési lap</a></li>
-            </ul>
-        </nav>
-        <article>
-            <div class="container my-5">
-                <div class="row g-4">
-                    <!-- Card 1 -->
-                    <div class="col-12 col-md-6">
-                        <div class="card h-100">
-                            <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Image">
-                            <div class="card-body">
-                                <h5 class="card-title">Márciusi ping-pong parádé</h5>
-                                <ul>
-                                    <li class="card-text">Kezdési időpont: 2026. március 2. 10:00</li>
-                                    <li>Befejezési időpont: 2026. március 6. 16:00</li>
-                                    <li>Helyszín: Szf Sportcsarnok (kis aranyos ping-pong terem)</li>
-                                </ul>
-                                <a href="marcius_solo.html" class="btn btn-primary">További információk</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Card 2 -->
-                    <div class="col-12 col-md-6">
-                        <div class="card h-100">
-                            <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Image">
-                            <div class="card-body">
-                                <h5 class="card-title">Márciusi páros ping-pong parádé</h5>
-                                <ul>
-                                    <li class="card-text">Kezdési időpont: 2026. március 16. 10:00</li>
-                                    <li>Befejezési időpont: 2026. március 20. 16:00</li>
-                                    <li>Helyszín: Szf Sportcsarnok (kis aranyos ping-pong terem)</li>
-                                </ul>
-                                <a href="marcius_paros.html" class="btn btn-primary">További információk</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Card 3 -->
-                    <div class="col-12 col-md-6">
-                        <div class="card h-100">
-                            <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Image">
-                            <div class="card-body">
-                                <h5 class="card-title">Áprilisi ping-pong parádé</h5>
-                                <ul>
-                                    <li class="card-text">Kezdési időpont: 2026. április 6. 10:00</li>
-                                    <li>Befejezési időpont: 2026. április 10. 16:00</li>
-                                    <li>Helyszín: Szf Sportcsarnok (kis aranyos ping-pong terem)</li>
-                                </ul>
-                                <a href="aprilis_solo.html" class="btn btn-primary">További információk</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Card 4 -->
-                    <div class="col-12 col-md-6">
-                        <div class="card h-100">
-                            <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Image">
-                            <div class="card-body">
-                                <h5 class="card-title">Áprilisi páros ping-pong parádé</h5>
-                                <ul>
-                                    <li class="card-text">Kezdési időpont: 2026. április 20. 10:00</li>
-                                    <li>Befejezési időpont: 2026. április 24. 16:00</li>
-                                    <li>Helyszín: Szf Sportcsarnok (kis aranyos ping-pong terem)</li>
-                                </ul>
-                                <a href="aprilis_paros.html" class="btn btn-primary">További információk</a>
-                            </div>
-                        </div>
-                    </div>
+      <header>
+        <h1>Ping-pong verseny eseménylista</h1>
+      </header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Kezdőoldal</a></li>
+          <li><a href="urlap.html">Jelentkezési lap</a></li>
+        </ul>
+      </nav>
+      <article>
+        <div class="container my-5">
+          <div class="row g-4">
+            <!-- Card 1 -->
+            <div class="col-12 col-md-6">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h5 class="card-title">Márciusi ping-pong parádé</h5>
+                  <ul>
+                    <li class="card-text">
+                      Kezdési időpont: 2026. március 2. 10:00
+                    </li>
+                    <li>Befejezési időpont: 2026. március 6. 16:00</li>
+                    <li>
+                      Helyszín: Szf Sportcsarnok (kis aranyos ping-pong terem)
+                    </li>
+                  </ul>
+                  <a href="marcius_solo.html" class="btn btn-primary"
+                    >További információk</a
+                  >
                 </div>
+              </div>
             </div>
-        </article>
-        <aside></aside>
-        <footer>
-            &copy Fóti Dávid - Medgyaszay Gergő - Csillag Gergő Zsolt
-        </footer>
-    </main>
-</body>
 
+            <!-- Card 2 -->
+            <div class="col-12 col-md-6">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h5 class="card-title">Márciusi páros ping-pong parádé</h5>
+                  <ul>
+                    <li class="card-text">
+                      Kezdési időpont: 2026. március 16. 10:00
+                    </li>
+                    <li>Befejezési időpont: 2026. március 20. 16:00</li>
+                    <li>
+                      Helyszín: Szf Sportcsarnok (kis aranyos ping-pong terem)
+                    </li>
+                  </ul>
+                  <a href="marcius_paros.html" class="btn btn-primary"
+                    >További információk</a
+                  >
+                </div>
+              </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="col-12 col-md-6">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h5 class="card-title">Áprilisi ping-pong parádé</h5>
+                  <ul>
+                    <li class="card-text">
+                      Kezdési időpont: 2026. április 6. 10:00
+                    </li>
+                    <li>Befejezési időpont: 2026. április 10. 16:00</li>
+                    <li>
+                      Helyszín: Szf Sportcsarnok (kis aranyos ping-pong terem)
+                    </li>
+                  </ul>
+                  <a href="aprilis_solo.html" class="btn btn-primary"
+                    >További információk</a
+                  >
+                </div>
+              </div>
+            </div>
+
+            <!-- Card 4 -->
+            <div class="col-12 col-md-6">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h5 class="card-title">Áprilisi páros ping-pong parádé</h5>
+                  <ul>
+                    <li class="card-text">
+                      Kezdési időpont: 2026. április 20. 10:00
+                    </li>
+                    <li>Befejezési időpont: 2026. április 24. 16:00</li>
+                    <li>
+                      Helyszín: Szf Sportcsarnok (kis aranyos ping-pong terem)
+                    </li>
+                  </ul>
+                  <a href="aprilis_paros.html" class="btn btn-primary"
+                    >További információk</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
+      <aside></aside>
+      <footer>&copy Fóti Dávid - Medgyaszay Gergő - Csillag Gergő Zsolt</footer>
+    </main>
+  </body>
 </html>
