hipity hopity there goes your property

--- a/aprilis_paros.html
+++ b/aprilis_paros.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <header>
-        <h1>Üdvözlünk a 13. Szf ping-pong versenyen</h1>
+        <h1>Üdvözlünk a 13. Szf ping-pong versenyén</h1>
       </header>
       <nav>
         <ul>
