--- a/urlap.html
+++ b/urlap.html
@@ -128,7 +128,7 @@
         </ol>
         <li class="cim"><a href="#igenyek">Igények</a></li>
         <ol>
-          <li class="alcim"><a href="#igenyekmegjegyzes">Igények</a></li>
+          <li class="alcim"><a href="#megjegyzes">Igények</a></li>
           <li class="alcim"><a href="#adatvedelem">adatvédelmi tájékoztató</a></li>
         </ol>
       </ul>
